# FTG_New

./: README.md
src/FTG_Algo/: package.xml  setup.cfg  setup.py
src/FTG_Algo/config/: straight_drive.yaml
src/FTG_Algo/decision_and_control/follow_the_gap_v0_ride/: package.xml  setup.py
src/FTG_Algo/decision_and_control/follow_the_gap_v0_ride/launch/: start.launch
src/FTG_Algo/follow_the_gap/: follow_the_gap_node.py
src/FTG_Algo/launch/: straight_drive.launch.py
src/lidar_vs/: Start_Lidar.py  package.xml  setup.cfg  setup.py
src/lidar_vs/launch/: lidar_with_obstacles_launch.py
src/lidar_vs/lidar_vs/: Start_Lidar.py
src/perception/obstacle_substitution/: package.xml  setup.py
src/perception/obstacle_substitution/obstacle_substitution/: launchers.py  obstacle_substitution_node.py
