<?xml version="1.0"?>
<package format="3">
  <name>follow_the_gap</name>
  <version>0.0.1</version>
  <description>MXCarkit Follow-the-Gap / Autonomy Tester package</description>

  <maintainer email="mxck@todo.todo">mxck</maintainer>
  <license>MIT</license>

  <!-- Build system -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Runtime dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>ackermann_msgs</exec_depend>

  <!-- Needed for ros2 launch + get_package_share_directory -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ament_index_python</exec_depend>

  <!-- Tests (optional) -->
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>